@@ -44,7 +44,9 @@ public class Runtime {
    * each enter/exit and the decl information for any new classes are
    * printed out and the class is then removed from the list.
    */
-  public static final /*@GuardedBy("<self>")*/ List<ClassInfo> new_classes =
+  // The order of this list depends on the order of loading by the JVM.
+  // Declared as LinkedList instead of List to permit use of removeFirst().
+  public static final /*@GuardedBy("<self>")*/ LinkedList<ClassInfo> new_classes =
       new LinkedList<ClassInfo>();
 
   /** List of all instrumented classes **/
@@ -227,7 +229,9 @@ public class Runtime {
       synchronized (new_classes) {
         num_new_classes = new_classes.size();
       }
-      if (num_new_classes > 0) process_new_classes();
+      if (num_new_classes > 0) {
+        process_new_classes();
+      }
 
       MethodInfo mi = methods.get(mi_index);
       mi.call_cnt++;
@@ -313,7 +317,9 @@ public class Runtime {
       synchronized (new_classes) {
         num_new_classes = new_classes.size();
       }
-      if (num_new_classes > 0) process_new_classes();
+      if (num_new_classes > 0) {
+        process_new_classes();
+      }
 
       // Skip this call if it was not sampled at entry to the method
       if (sample_start > 0) {
@@ -394,8 +400,8 @@ public class Runtime {
   }
 
   /**
-   * Writes out decl information for any new classes and removes
-   * them from the list.
+   * Writes out decl information for any new classes (those in the
+   * new_classes field) and removes them from that list.
    */
   /*@Holding("Runtime.class")*/
   public static void process_new_classes() {
@@ -409,8 +415,7 @@ public class Runtime {
       ClassInfo class_info = null;
       synchronized (new_classes) {
         if (new_classes.size() > 0) {
-          class_info = new_classes.get(0);
-          new_classes.remove(0);
+          class_info = new_classes.removeFirst();
         }
       }
       if (class_info == null) break;
